--- a/Coursera Capstone Project.ipynb
+++ b/Coursera Capstone Project.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. Write some markdown to explain that this notebook will be mainly used for the capstone project."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,8 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import required packages\n",
-    "import pandas as pd\n",
+    "#2. Import the pandas library as pd.\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3. Import the Numpy library as np.\n",
     "import numpy as np"
    ]
   },
@@ -39,7 +57,8 @@
     }
    ],
    "source": [
-    "print('Hello Capstone Course!')"
+    "#4. Print the following the statement: Hello Capstone Project Course!\n",
+    "print(\"Hello Capstone Project Course!\")"
    ]
   },
   {
