Update Segmenting and Clustering Neighborhoods in Toronto 3.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto 3.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto 3.ipynb
@@ -8723,6 +8723,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Observations:\n",
+    "\n",
+    "Most of the neighborhoods fall into Cluster 1 which are mostly business areas with cafe, restaurants, supermarkets etc. Cluster 2 is just a garden, Cluster 3 are playground and park, Cluster 4 park and swim school, and lastly Cluster 5 park and trail.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
