Update Capstone project final.ipynb

--- a/Week 5/Capstone project final.ipynb
+++ b/Week 5/Capstone project final.ipynb
@@ -1041,9 +1041,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'KOLQHCT2BHCU1MRD3MLAKO45BRAN24W2XYTJ4VET05NJRRZJ' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'E52WORYNSYPTFEBG3DQRKKK33RXZWP4C1NLJJP03X0VM3VRC' # your Foursquare Secret\n",
-    "VERSION = '20180605' # Foursquare API version\n",
+    "CLIENT_ID =  # your Foursquare ID\n",
+    "CLIENT_SECRET =  # your Foursquare Secret\n",
+    "VERSION =  # Foursquare API version\n",
     "LIMIT = 100 # limit of number of venues returned by Foursquare API\n",
     "radius = 500 # define radius"
    ]
